@@ -32,6 +32,7 @@ version <next>:
 - RTMP support in libavformat
 - noX handling for OPT_BOOL X options
 - Wave64 demuxer
+- IEC-61937 compatible Muxer
 
 
 
